--- a/package.json
+++ b/package.json
@@ -10,18 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.4.0",
     "html2canvas": "^1.4.1",
-    "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
-    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.545.0",
     "mammoth": "^1.11.0",
     "pagedjs": "^0.4.3",
-    "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^5.4.296",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hook-form": "^7.64.0"
+    "react-hook-form": "^7.64.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
