--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "firebase": "^12.4.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "lexical": "^0.37.0",
     "lucide-react": "^0.545.0",
     "mammoth": "^1.11.0",
     "pagedjs": "^0.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
